--- a/cv-user/src/styles/button-column.scss
+++ b/cv-user/src/styles/button-column.scss
@@ -1,4 +1,11 @@
+@font-face {
+    font-family: 'Roboto-Thin';
+    src: url('@/assets/fonts/Roboto-Thin.ttf') format('truetype');
+}
+
 a {
+    font-family: 'Roboto-Thin';
     color: white;
     font-size: 1.80rem;
+    text-decoration: none;
 }
