--- a/cv-user/src/styles/body-layout.scss
+++ b/cv-user/src/styles/body-layout.scss
@@ -1,3 +1,8 @@
+  .container{
+    padding-left:3rem;
+    padding-right: 3rem;
+  }
+  
   .row  {
       padding-top:20px;
       padding:0px 3rem 0px 3rem ;
