--- a/cv-user/src/styles/header-layout.scss
+++ b/cv-user/src/styles/header-layout.scss
@@ -1,12 +1,18 @@
-.row  {
-      padding:20px 3rem;
-  }
+.container {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
 
-  .row a{
-    text-decoration: none;
-    color:white;
-  }
 
-  .right{
-    text-align: right;;
-  }
+.header  {
+    padding:20px 0px;
+}
+
+.header a{
+  text-decoration: none;
+  color:white;
+}
+
+.right{
+  text-align: right;;
+}
