adjust container paddings

--- a/cv-user/src/styles/header-layout.scss
+++ b/cv-user/src/styles/header-layout.scss
@@ -1,11 +1,11 @@
 .container {
-  padding-left: 3rem;
-  padding-right: 3rem;
+  padding-left: 10rem;
+  padding-right: 10rem;
 }
 
 
 .header  {
-    padding:20px 0px;
+    padding:5rem 0px;
 }
 
 .header a{
