--- a/cv-user/src/styles/button-header.scss
+++ b/cv-user/src/styles/button-header.scss
@@ -12,35 +12,62 @@ a {
     height: 10px;
 }
 
-.line{
-    height: 10px;
-    background-color: rgba(74, 34, 0, 0.7);
+.btn {
+    cursor: pointer;
+    position: relative;
+    padding: 10px 20px;
+    font-size: 28px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    transition: all 1s;
+
+    &:after,
+    &:before {
+        content: " ";
+        width: 10px;
+        height: 10px;
+        position: absolute;
+        border: 0px solid #fff;
+        transition: all 0.5s;
+    }
+
+    &:after {
+        top: -1px;
+        left: -1px;
+        border-top: 1px solid #CC5F00;
+        border-left: 1px solid #CC5F00;
+    }
+
+    &:before {
+        bottom: -1px;
+        right: -1px;
+        border-bottom: 1px solid #CC5F00;
+        border-right: 1px solid #CC5F00;
+    }
+
+    &:hover {
+        border-top-right-radius: 0px;
+        border-bottom-left-radius: 0px;
+
+        // background:rgba(0,0,0,.5);
+        // color:white;
+        &:before,
+        &:after {
+
+            width: 100%;
+            height: 100%;
+            // border-color:white;
+        }
+    }
+
+    &:active {
+        background-color: #CC5F00;
+    }
 }
 
-.v-enter-active,.v-leave-active {
-    transition: width 0.5s ease, height 0.5s ease;
+.data-container {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
-/* Define the initial width of the element */
-.v-enter-from{
-    width: 0;
-    height: 0;
-}
-
-.v-enter-to {
-    width: 100%;
-    height: 10px;
-}
-
-.v-leave-from {
-    width: 100%;
-    height: 10px;
-}
-
-.v-leave-to {
-    width: 0;
-    height: 10px;
-}
-
-
-
