--- a/cv-user/src/styles/buttons-column.scss
+++ b/cv-user/src/styles/buttons-column.scss
@@ -1,3 +1,11 @@
+.buttons-column{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    height: fit-content;
+}
+
 h3 {
     margin: 40px 0 0;
 }
