load images dinamically

--- a/cv-user/src/styles/profile-image.scss
+++ b/cv-user/src/styles/profile-image.scss
@@ -1,5 +1,5 @@
 .profile-img{
-    background-image: url('@/assets/images/pic.jpg');
+    //background-image: url('@/assets/images/pic.jpg');
     background-position:center;
     background-size:cover;
     background-repeat: no-repeat;
