--- a/cv-user/src/styles/button-header.scss
+++ b/cv-user/src/styles/button-header.scss
@@ -15,8 +15,8 @@ a {
 .btn {
     cursor: pointer;
     position: relative;
-    padding: 10px 20px;
-    font-size: 28px;
+    padding: 0.5rem 1.2rem;
+    font-size: 2rem;
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
     transition: all 1s;
