--- a/cv-user/src/styles/buttons-column.scss
+++ b/cv-user/src/styles/buttons-column.scss
@@ -4,6 +4,8 @@
     bottom: 0;
     margin: auto;
     height: fit-content;
+    right: 0;
+    left:0;
 }
 
 h3 {
@@ -12,7 +14,6 @@ h3 {
 
 ul {
     list-style-type: none;
-    float: left;
     padding: 0;
 }
 
