--- a/cv-user/src/styles/profile-image.scss
+++ b/cv-user/src/styles/profile-image.scss
@@ -7,6 +7,7 @@
     width: 20rem;
     height: 30rem;
     z-index: 1;
+    margin: auto;
 }
 
 .profile-img:after{
@@ -16,7 +17,7 @@
     position: absolute;
     height: 30rem;
     width: 20rem;
-    left: 2.5rem;
+    left: 9rem;
     top:2.5rem;
     border-radius: 13px;
     z-index: -1;
