--- a/cv-user/src/styles/content.scss
+++ b/cv-user/src/styles/content.scss
@@ -1,10 +1,15 @@
 .content{
     color:white;
     padding-top:2rem;
+    >div{
+        opacity: 0;
+        animation: fadeIn 1s ease-in forwards;
+    }
 }
 
 .my-container{
     height: 100%;
+    
     >div {
             padding-left: 1rem;
             padding-right: 1rem;
@@ -13,3 +18,14 @@
             height: 100%;
         }
 } 
+
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
