--- a/cv-user/src/styles/button-column.scss
+++ b/cv-user/src/styles/button-column.scss
@@ -10,10 +10,10 @@ a {
     color: white;
     font-size: 1.70rem;
     text-decoration: none;
-    height: 10px;
 }
 
 .line{
+    position:absolute;
     height: 2px;
     background-color: #CC5F00;;
 }
