--- a/cv-user/src/styles/button-column.scss
+++ b/cv-user/src/styles/button-column.scss
@@ -10,38 +10,25 @@ a {
     color: white;
     font-size: 1.70rem;
     text-decoration: none;
+    // Line that will be animated
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: -5px;
+            width: 0;
+            height: 2px;
+            background-color: #CC5F00;
+            transition: width 0.4s ease;
+        }
+    
+        // Hover effect
+        &:hover::after {
+            width: 100%;
+        }
 }
+        // Line that will be animated
 
-.line{
-    position:absolute;
-    height: 2px;
-    background-color: #CC5F00;;
-}
-
-.v-enter-active,.v-leave-active {
-    transition: width 0.5s ease, height 0.5s ease;
-}
-
-/* Define the initial width of the element */
-.v-enter-from{
-    width: 0;
-    height: 0;
-}
-
-.v-enter-to {
-    width: 100%;
-    height: 2px;
-}
-
-.v-leave-from {
-    width: 100%;
-    height: 2px;
-}
-
-.v-leave-to {
-    width: 0;
-    height: 4px;
-}
 
 
 
