--- a/curriculum-frontend/assets/styles/buttons-column.scss
+++ b/curriculum-frontend/assets/styles/buttons-column.scss
@@ -1,4 +1,4 @@
-.buttons-column {
+/*.buttons-column {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -6,7 +6,7 @@
     height: fit-content;
     right: 0;
     left: 0;
-}
+}*/
 
 h3 {
     margin: 40px 0 0;
