--- a/curriculum-frontend/assets/styles/button-column.scss
+++ b/curriculum-frontend/assets/styles/button-column.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Roboto-Thin';
-    src: url('@/assets/fonts/Roboto-Thin.ttf') format('truetype');
+    src: url('/fonts/Roboto-Thin.ttf') format('truetype');
 }
 
 a {
