--- a/curriculum-frontend/assets/styles/profile-image.scss
+++ b/curriculum-frontend/assets/styles/profile-image.scss
@@ -5,8 +5,8 @@
     border-radius: 13px;
     width: 20rem;
     height: 30rem;
-    z-index: 1;
     margin: auto;
+    position:relative
 }
 
 .profile-img:after {
@@ -18,8 +18,8 @@
     height: 30rem;
     width: 19rem;
     left: auto;
-    right: auto;
-    /* top: 2.5rem; */
+    right: 3rem;
+    top: 2rem;
     border-radius: 13px;
     z-index: -1;
 }
