--- a/curriculum-frontend/assets/styles/buttons-header.scss
+++ b/curriculum-frontend/assets/styles/buttons-header.scss
@@ -5,17 +5,16 @@
 
 a {
     position: relative;
-    font-family: 'Roboto-Thin';
-    color: white;
-    font-size: 1.9rem;
     text-decoration: none;
 }
 
 .btn {
     cursor: pointer;
     position: relative;
+}
+
+.afterSquare{
     padding: 0.5rem 1.2rem;
-    font-size: 2rem;
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
     transition: all 1s;
@@ -26,22 +25,17 @@ a {
         width: 10px;
         height: 10px;
         position: absolute;
-        border: 0px solid #fff;
         transition: all 0.5s;
     }
 
     &:after {
         top: -1px;
         left: -1px;
-        border-top: 1px solid #CC5F00;
-        border-left: 1px solid #CC5F00;
     }
 
     &:before {
         bottom: -1px;
         right: -1px;
-        border-bottom: 1px solid #CC5F00;
-        border-right: 1px solid #CC5F00;
     }
 
     &:hover {
@@ -57,10 +51,6 @@ a {
             height: 100%;
             // border-color:white;
         }
-    }
-
-    &:active {
-        background-color: #CC5F00;
     }
 }
 
